--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         </div>
 
         <!-- Mode Selection Cards -->
-        <div class="grid md:grid-cols-2 gap-8 max-w-4xl w-full mb-12">
+        <div class="grid md:grid-cols-3 gap-6 max-w-6xl w-full mb-12">
             <!-- Presenter Card -->
-            <div class="card rounded-2xl p-8 text-center">
+            <div class="card rounded-2xl p-6 text-center">
                 <div class="mb-6">
                     <div
                         class="w-16 h-16 mx-auto mb-4 rounded-full bg-blue-500 bg-opacity-20 flex items-center justify-center">
@@ -85,16 +85,15 @@
                             </path>
                         </svg>
                     </div>
-                    <h2 class="text-2xl font-bold mb-3">Presenter Mode</h2>
-                    <p class="text-gray-300 mb-6 leading-relaxed">
-                        Control your presentation with full navigation, keyboard shortcuts, and real-time sync to all
-                        viewers.
+                    <h2 class="text-xl font-bold mb-3">Presenter Mode</h2>
+                    <p class="text-gray-300 mb-4 leading-relaxed text-sm">
+                        Control your presentation with full navigation and real-time sync to all viewers.
                     </p>
                 </div>
 
-                <div class="space-y-3 mb-8 text-sm text-gray-300">
+                <div class="space-y-2 mb-6 text-xs text-gray-300">
                     <div class="flex items-center justify-center">
-                        <svg class="w-4 h-4 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
+                        <svg class="w-3 h-3 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
                             <path fill-rule="evenodd"
                                 d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                 clip-rule="evenodd"></path>
@@ -102,31 +101,23 @@
                         Keyboard navigation
                     </div>
                     <div class="flex items-center justify-center">
-                        <svg class="w-4 h-4 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
+                        <svg class="w-3 h-3 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
                             <path fill-rule="evenodd"
                                 d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                 clip-rule="evenodd"></path>
                         </svg>
-                        Full slide control
-                    </div>
-                    <div class="flex items-center justify-center">
-                        <svg class="w-4 h-4 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
-                            <path fill-rule="evenodd"
-                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                        Fullscreen mode
+                        Sync control
                     </div>
                 </div>
 
                 <a href="/presenter"
-                    class="btn-primary inline-block px-8 py-4 rounded-xl font-semibold text-white text-lg w-full">
+                    class="btn-primary inline-block px-6 py-3 rounded-xl font-semibold text-white text-sm w-full">
                     Start Presenting
                 </a>
             </div>
 
             <!-- Viewer Card -->
-            <div class="card rounded-2xl p-8 text-center">
+            <div class="card rounded-2xl p-6 text-center">
                 <div class="mb-6">
                     <div
                         class="w-16 h-16 mx-auto mb-4 rounded-full bg-green-500 bg-opacity-20 flex items-center justify-center">
@@ -138,16 +129,15 @@
                             </path>
                         </svg>
                     </div>
-                    <h2 class="text-2xl font-bold mb-3">Viewer Mode</h2>
-                    <p class="text-gray-300 mb-6 leading-relaxed">
-                        Watch presentations that automatically sync with the presenter. Perfect for audiences and remote
-                        viewing.
+                    <h2 class="text-xl font-bold mb-3">Viewer Mode</h2>
+                    <p class="text-gray-300 mb-4 leading-relaxed text-sm">
+                        Watch presentations that automatically sync with the presenter in real-time.
                     </p>
                 </div>
 
-                <div class="space-y-3 mb-8 text-sm text-gray-300">
+                <div class="space-y-2 mb-6 text-xs text-gray-300">
                     <div class="flex items-center justify-center">
-                        <svg class="w-4 h-4 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
+                        <svg class="w-3 h-3 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
                             <path fill-rule="evenodd"
                                 d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                 clip-rule="evenodd"></path>
@@ -155,26 +145,60 @@
                         Real-time sync
                     </div>
                     <div class="flex items-center justify-center">
-                        <svg class="w-4 h-4 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
+                        <svg class="w-3 h-3 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
                             <path fill-rule="evenodd"
                                 d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                 clip-rule="evenodd"></path>
                         </svg>
                         Mobile optimized
                     </div>
+                </div>
+
+                <a href="/viewer"
+                    class="btn-secondary inline-block px-6 py-3 rounded-xl font-semibold text-white text-sm w-full">
+                    Join as Viewer
+                </a>
+            </div>
+
+            <!-- Reader Card -->
+            <div class="card rounded-2xl p-6 text-center">
+                <div class="mb-6">
+                    <div
+                        class="w-16 h-16 mx-auto mb-4 rounded-full bg-purple-500 bg-opacity-20 flex items-center justify-center">
+                        <svg class="w-8 h-8 text-purple-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
+                            </path>
+                        </svg>
+                    </div>
+                    <h2 class="text-xl font-bold mb-3">Reader Mode</h2>
+                    <p class="text-gray-300 mb-4 leading-relaxed text-sm">
+                        Browse slides independently with full navigation control and PDF download.
+                    </p>
+                </div>
+
+                <div class="space-y-2 mb-6 text-xs text-gray-300">
                     <div class="flex items-center justify-center">
-                        <svg class="w-4 h-4 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
+                        <svg class="w-3 h-3 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
                             <path fill-rule="evenodd"
                                 d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                 clip-rule="evenodd"></path>
                         </svg>
-                        Clean interface
+                        Independent navigation
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <svg class="w-3 h-3 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd"
+                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                        PDF download
                     </div>
                 </div>
 
-                <a href="/viewer"
-                    class="btn-secondary inline-block px-8 py-4 rounded-xl font-semibold text-white text-lg w-full">
-                    Join as Viewer
+                <a href="/reader"
+                    class="btn-secondary inline-block px-6 py-3 rounded-xl font-semibold text-white text-sm w-full">
+                    Browse Slides
                 </a>
             </div>
         </div>
