--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <!-- Mode Selection Cards -->
-        <div class="grid md:grid-cols-3 gap-6 max-w-6xl w-full mb-12">
+        <div class="grid md:grid-cols-4 gap-6 max-w-6xl w-full mb-12">
             <!-- Presenter Card -->
             <div class="card rounded-2xl p-6 text-center">
                 <div class="mb-6">
@@ -199,6 +199,48 @@
                 <a href="/reader"
                     class="btn-secondary inline-block px-6 py-3 rounded-xl font-semibold text-white text-sm w-full">
                     Browse Slides
+                </a>
+            </div>
+
+            <!-- Editor Card -->
+            <div class="card rounded-2xl p-6 text-center">
+                <div class="mb-6">
+                    <div
+                        class="w-16 h-16 mx-auto mb-4 rounded-full bg-orange-500 bg-opacity-20 flex items-center justify-center">
+                        <svg class="w-8 h-8 text-orange-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z">
+                            </path>
+                        </svg>
+                    </div>
+                    <h2 class="text-xl font-bold mb-3">Editor Mode</h2>
+                    <p class="text-gray-300 mb-4 leading-relaxed text-sm">
+                        Create, edit, and manage slide content.
+                    </p>
+                </div>
+
+                <div class="space-y-2 mb-6 text-xs text-gray-300">
+                    <div class="flex items-center justify-center">
+                        <svg class="w-3 h-3 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd"
+                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                        Slide creation
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <svg class="w-3 h-3 mr-2 text-green-400" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd"
+                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                        Slide management
+                    </div>
+                </div>
+
+                <a href="/editor"
+                    class="btn-secondary inline-block px-6 py-3 rounded-xl font-semibold text-white text-sm w-full">
+                    Edit Slides
                 </a>
             </div>
         </div>
